Fix blockquote spacing

--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -185,23 +185,6 @@
     @include vf-heading-6;
   }
 
-  // blockquotes
-  blockquote {
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-top: 0;
-    overflow: auto; // include margins of children into it's own height
-    padding-left: $sp-large;
-
-    > p {
-      font-style: italic;
-    }
-
-    > cite {
-      font-style: normal;
-    }
-  }
-
   // misc
   strong {
     @extend %bold;
